--- a/testing.ipynb
+++ b/testing.ipynb
@@ -8,12 +8,13 @@
    },
    "outputs": [],
    "source": [
-    "from src.reader import Reader"
+    "from src.reader import Reader\n",
+    "import time"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,46 +23,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "reader.read(img_id=\"359331\").shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "reader.img_link_map"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[============================================================] 100.0% ...Downloading\r"
+      "Dataset setting up epoch: 0\n",
+      "[============================================================] 100.0% ...Downloading Images\n",
+      "Downloading time: 2.79s\n",
+      "(5, 256, 256, 3)\n",
+      "Dataset setting up epoch: 1\n",
+      "[============================================================] 100.0% ...Downloading Images\n",
+      "Downloading time: 2.84s\n",
+      "(5, 256, 256, 3)\n"
      ]
     }
    ],
    "source": [
-    "a = range(1000)\n",
-    "reader.read(img_id_list=a)"
+    "for batch in reader.read(path=\"data/AVA_test.txt\"):\n",
+    "    print(batch.shape)\n",
+    "    time.sleep(1)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
