--- a/testing.ipynb
+++ b/testing.ipynb
@@ -2,50 +2,42 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
     "from src.reader import Reader\n",
-    "import time"
+    "from src.downloader import Downloader"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "reader = Reader()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Dataset setting up epoch: 0\n",
-      "[============================================================] 100.0% ...Downloading Images\n",
-      "Downloading time: 2.79s\n",
-      "(5, 256, 256, 3)\n",
-      "Dataset setting up epoch: 1\n",
-      "[============================================================] 100.0% ...Downloading Images\n",
-      "Downloading time: 2.84s\n",
-      "(5, 256, 256, 3)\n"
+      "[============================================================] 100.0% .Process Iteration: 10, Image id: 917722        \r"
      ]
     }
    ],
    "source": [
-    "for batch in reader.read(path=\"data/AVA_test.txt\"):\n",
-    "    print(batch.shape)\n",
-    "    time.sleep(1)"
+    "#Download images Starting from 1st challange to 10th challange\n",
+    "#In other words dowload 10 subsets\n",
+    "downloader = Downloader(start=10, end=11)\n",
+    "downloader.download(path=\"data/AVA.txt\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
