--- a/testing.ipynb
+++ b/testing.ipynb
@@ -21,14 +21,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[============================================================] 100.0% .Process Iteration: 10, Image id: 917722        \r"
+      "[============================================================] 100.0% .Process Iteration: 9, Image id: 917722        \r"
      ]
     }
    ],
    "source": [
     "#Download images Starting from 1st challange to 10th challange\n",
-    "#In other words dowload 10 subsets\n",
-    "downloader = Downloader(start=10, end=11)\n",
+    "#In other words dowload 10 1st subsets\n",
+    "downloader = Downloader(start=0, end=10)\n",
     "downloader.download(path=\"data/AVA.txt\")"
    ]
   },
