--- a/testing.ipynb
+++ b/testing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
@@ -14,21 +14,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Download images Starting from 1st challange to 10th challange\n",
+    "#In other words dowload 10 subsets\n",
+    "downloader = Downloader(start=11, end=100)\n",
+    "downloader.download(path=\"data/AVA.txt\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[============================================================] 100.0% .Process Iteration: 10, Image id: 917722        \r"
+      "[============================================================] 100.0% .Process Iteration: 201, Image id: 266570        \r"
      ]
     }
    ],
    "source": [
-    "#Download images Starting from 1st challange to 10th challange\n",
-    "#In other words dowload 10 subsets\n",
-    "downloader = Downloader(start=10, end=11)\n",
+    "downloader = Downloader(start=201, end=202)\n",
     "downloader.download(path=\"data/AVA.txt\")"
    ]
   },
