--- a/testing.ipynb
+++ b/testing.ipynb
@@ -2,34 +2,49 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
     "from src.reader import Reader\n",
-    "from src.downloader import Downloader"
+    "from src.downloader import Downloader\n",
+    "from src.localreader import LocalReader, SHRINK, CENTERING"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Download images Starting from 1st challange to 10th challange\n",
+    "#In other words dowload 10 1st subsets\n",
+    "#downloader = Downloader(start=0, end=10)\n",
+    "#downloader.download(path=\"data/AVA.txt\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[============================================================] 100.0% .Process Iteration: 9, Image id: 917722        \r"
+      "[============================================================] 100.0% .531.tar.gz    \n",
+      "(234, 256, 256, 3)\n",
+      "[============================================================] 100.0% .430.tar.gz    \n",
+      "(828, 256, 256, 3)\n"
      ]
     }
    ],
    "source": [
-    "#Download images Starting from 1st challange to 10th challange\n",
-    "#In other words dowload 10 1st subsets\n",
-    "downloader = Downloader(start=0, end=10)\n",
-    "downloader.download(path=\"data/AVA.txt\")"
+    "reader = LocalReader(width=256, height=256, shaping=SHRINK)\n",
+    "for images in reader.read(start=0, end=2):\n",
+    "    print(images.shape)"
    ]
   },
   {
