--- a/testing.ipynb
+++ b/testing.ipynb
@@ -13,12 +13,13 @@
     "\n",
     "from src.reader import Reader\n",
     "from src.downloader import Downloader\n",
-    "from src.localreader import LocalReader, SHRINK, CENTERING, getMean"
+    "from src.localreader import LocalReader, SHRINK, CENTERING, getMean\n",
+    "from src.processedreader import ProcessedReader"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,46 +31,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "reader = LocalReader(width=256, height=256, shaping=SHRINK)\n",
-    "for images, scores in reader.read(start=0, end=3):\n",
-    "    print(images.shape)\n",
-    "    print(scores.shape)\n",
-    "    score_mean = getMean(scores)\n",
-    "    print(score_mean.shape)\n",
-    "    print(pd.Series(score_mean).describe())"
+    "# Start and END can be any numbers\n",
+    "start = 0\n",
+    "end = 5"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Iteration: 1\n",
-      "Iteration: 2\n",
-      "Iteration: 3\n",
-      "Iteration: 4\n",
-      "Iteration: 5\n",
-      "Iteration: 6\n",
-      "Iteration: 7\n",
-      "Iteration: 8\n",
-      "Iteration: 9\n",
-      "Iteration: 10\n"
+      "Iteration: 1, 531.tar.gz\n",
+      "Iteration: 2, 430.tar.gz\n",
+      "Iteration: 3, 859.tar.gz\n",
+      "Iteration: 4, 419.tar.gz\n",
+      "Iteration: 5, 532.tar.gz\n"
      ]
     }
    ],
    "source": [
     "reader = LocalReader(validation_size=0.2)\n",
-    "reader.preprocess(start=0, end=10)"
+    "reader.preprocess(start=start, end=end)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(187, 256, 256, 3)\n",
+      "(187,)\n",
+      "(662, 256, 256, 3)\n",
+      "(662,)\n",
+      "(155, 256, 256, 3)\n",
+      "(155,)\n",
+      "(91, 256, 256, 3)\n",
+      "(91,)\n",
+      "(219, 256, 256, 3)\n",
+      "(219,)\n",
+      "(199, 256, 256, 3)\n",
+      "(199,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "reader = ProcessedReader(shaping=SHRINK, validation_size=0.2)\n",
+    "for images, scores in reader.train(start=start, end=end):\n",
+    "    print(images.shape)\n",
+    "    print(scores.shape)"
    ]
   },
   {
