--- a/testing.ipynb
+++ b/testing.ipynb
@@ -13,7 +13,7 @@
     "\n",
     "from src.reader import Reader\n",
     "from src.downloader import Downloader\n",
-    "from src.localreader import LocalReader, SHRINK, CENTERING, getMean\n",
+    "from src.localreader import LocalReader, SHRINK, CROP\n",
     "from src.processedreader import ProcessedReader"
    ]
   },
@@ -31,43 +31,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Start and END can be any numbers\n",
-    "start = 0\n",
-    "end = 5"
+    "# reader = LocalReader(validation_size=0.2, shaping=CROP)\n",
+    "# reader.preprocess(start=0, end=1)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Iteration: 1, 531.tar.gz\n",
-      "Iteration: 2, 430.tar.gz\n",
-      "Iteration: 3, 859.tar.gz\n",
-      "Iteration: 4, 419.tar.gz\n",
-      "Iteration: 5, 532.tar.gz\n"
-     ]
-    }
-   ],
-   "source": [
-    "reader = LocalReader(validation_size=0.2)\n",
-    "reader.preprocess(start=start, end=end)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "scrolled": false
-   },
    "outputs": [
     {
      "name": "stdout",
@@ -84,15 +59,64 @@
       "(219, 256, 256, 3)\n",
       "(219,)\n",
       "(199, 256, 256, 3)\n",
-      "(199,)\n"
+      "(199,)\n",
+      "(71, 256, 256, 3)\n",
+      "(71,)\n",
+      "(300, 256, 256, 3)\n",
+      "(300,)\n",
+      "(73, 256, 256, 3)\n",
+      "(73,)\n",
+      "(134, 256, 256, 3)\n",
+      "(134,)\n"
      ]
     }
    ],
    "source": [
-    "reader = ProcessedReader(shaping=SHRINK, validation_size=0.2)\n",
-    "for images, scores in reader.train(start=start, end=end):\n",
+    "reader = LocalReader(validation_size=0.2, shaping=CROP)\n",
+    "for images, scores in reader.train(start=0, end=10):\n",
     "    print(images.shape)\n",
     "    print(scores.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "reader = LocalReader(validation_size=0.2, shaping=SHRINK)\n",
+    "for images, scores in reader.train(start=0, end=10):\n",
+    "    print(images.shape)\n",
+    "    print(scores.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iteration: 1, 531.tar.gz\n",
+      "Iteration: 2, 430.tar.gz\n",
+      "Iteration: 3, 859.tar.gz\n",
+      "Iteration: 4, 419.tar.gz\n",
+      "Iteration: 5, 532.tar.gz\n",
+      "Iteration: 6, 807.tar.gz\n",
+      "Iteration: 7, 966.tar.gz\n",
+      "Iteration: 8, 341.tar.gz\n",
+      "Iteration: 9, 1190.tar.gz\n",
+      "Iteration: 10, 1024.tar.gz\n"
+     ]
+    }
+   ],
+   "source": [
+    "reader = LocalReader(shaping=CROP)\n",
+    "reader.preprocess(start=0, end=10)"
    ]
   },
   {
